--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-v1.2-"
+CONFIG_LOCALVERSION="-iX-v1.4-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -432,12 +432,10 @@ CONFIG_MSM_SMD_PKT=y
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
-CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1620000
-CONFIG_MSM_CPU_FREQ_MIN=192000
-CONFIG_AUTO_HOTPLUG=y
+# CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+# CONFIG_AUTO_HOTPLUG is not set
 CONFIG_USERSPACE_VOLTAGE_CONTROL=y
-CONFIG_MSM_AVS_HW=y
+# CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
@@ -490,7 +488,7 @@ CONFIG_MSM_DLOAD_MODE=y
 CONFIG_MSM_JTAG=y
 # CONFIG_MSM_JTAG_MM is not set
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
-# CONFIG_MSM_RUN_QUEUE_STATS is not set
+CONFIG_MSM_RUN_QUEUE_STATS=y
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 # CONFIG_MSM_GSBI9_UART is not set
 CONFIG_MSM_SHOW_RESUME_IRQ=y
@@ -689,12 +687,17 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
+CONFIG_INTELLI_MAX_INACTIVE_FREQ=1134000
+CONFIG_CPUFREQ_LIMIT_MAX_FREQ=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -1670,6 +1673,7 @@ CONFIG_TOUCHSCREEN_MMS144=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_LGE_COMMON is not set
 # CONFIG_TOUCHSCREEN_LGE_SYNAPTICS is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -2360,6 +2364,7 @@ CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_OV2720 is not set
 # CONFIG_OV8825 is not set
 # CONFIG_IMX135 is not set
+# CONFIG_OV9724 is not set
 # CONFIG_MSM_EEPROM is not set
 # CONFIG_IMX074_EEPROM is not set
 # CONFIG_IMX091_EEPROM is not set
@@ -2507,6 +2512,8 @@ CONFIG_FB_MSM_MIPI_SAMSUNG_OLED_VIDEO_HD_PT=y
 # CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35590_CMD_720P_PT is not set
+# CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
@@ -2557,6 +2564,8 @@ CONFIG_FB_MSM_MIPI_SAMSUNG_OLED_VIDEO_HD_PT_PANEL=y
 # CONFIG_FB_MSM_MIPI_NT35510_CMD_WVGA_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_NT35516_VIDEO_QHD_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT_PANEL is not set
+# CONFIG_FB_MSM_MIPI_NT35590_CMD_720P_PT_PANEL is not set
+# CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT_PANEL is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO_PANEL is not set
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
 # CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
@@ -3168,7 +3177,11 @@ CONFIG_STAGING=y
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_QCACHE=y
+CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZCACHE=y
+# CONFIG_QCACHE is not set
+CONFIG_ZSMALLOC=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
@@ -3179,7 +3192,6 @@ CONFIG_QCACHE=y
 #
 # CONFIG_SPEAKUP is not set
 # CONFIG_TOUCHSCREEN_CLEARPAD_TM1217 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
 # CONFIG_STAGING_MEDIA is not set
 
 #
