--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1662,6 +1662,12 @@ config AUTO_HOTPLUG
 	help
 	  Generic auto-hotplug cpu hotplug driver for ARM SOCs
 
+config MAKO_HOTPLUG
+	bool "Enable mako-hotplug cpu hotplug driver"
+	default n
+	help
+	  Generic mako-hotplug cpu hotplug driver for ARM SOCs
+
 config USERSPACE_VOLTAGE_CONTROL
 	bool "Enable Userspace CPU Voltage Control"
 	default y
