--- a/arch/arm/configs/ix_d2_defconfig
+++ b/arch/arm/configs/ix_d2_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.40 Kernel Configuration
+# Linux/arm 3.4.41 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -42,7 +42,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-iX-v2.3-"
+CONFIG_LOCALVERSION="-iX-v2.4-"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -471,6 +471,7 @@ CONFIG_MSM_PIL_VIDC=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_MODEM_8960=y
 CONFIG_MSM_LPASS_8960=y
+# CONFIG_SEC_SSR_DUMP is not set
 CONFIG_MSM_BUSPM_DEV=m
 CONFIG_MSM_TZ_LOG=y
 CONFIG_MSM_RPM_LOG=y
@@ -3551,6 +3552,18 @@ CONFIG_DEBUG_LL_UART_NONE=y
 # CONFIG_DEBUG_LL_UART is not set
 # CONFIG_DEBUG_ICEDCC is not set
 # CONFIG_DEBUG_SEMIHOSTING is not set
+
+#
+# Samsung Debugging Feature
+#
+# CONFIG_SEC_DEBUG is not set
+CONFIG_SEC_DEBUG_USER=y
+# CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
+# CONFIG_SEC_DEBUG_MSG_LOG is not set
+# CONFIG_SEC_DEBUG_SUBSYS is not set
+# CONFIG_SEC_DEBUG_DCVS_LOG is not set
+# CONFIG_SEC_DEBUG_FUELGAUGE_LOG is not set
+# CONFIG_SEC_DEBUG_LOW_LOG is not set
 # CONFIG_EARLY_PRINTK is not set
 CONFIG_PID_IN_CONTEXTIDR=y
 
